--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -18,6 +18,10 @@
   src: https://github.com/alvistack/ansible-role-bootstrap
   version: develop
 
+- name: etcd-certs
+  src: https://github.com/alvistack/ansible-role-etcd-certs
+  version: develop
+
 - name: python
   src: https://github.com/alvistack/ansible-role-python
   version: develop
