--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -21,3 +21,14 @@
     - ansible_service_mgr == 'systemd'
   changed_when: false
   ignore_errors: true
+
+- name: systemctl restart
+  systemd:
+    name: "{{ item.name }}"
+    state: restarted
+  with_items:
+    - { name: "etcd" }
+  when:
+    - ansible_service_mgr == 'systemd'
+  changed_when: false
+  ignore_errors: true
