--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -303,6 +303,10 @@
     - { dest: "{{ etcd_trusted_ca_file }}" }
   tags: etcd
 
+- name: flush handlers
+  meta: flush_handlers
+  tags: etcd
+
 - name: enable service
   service:
     name: etcd
