--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: systemctl daemon-reload
+- name: etcd | systemctl daemon-reload
   systemd:
     daemon_reload: true
   when:
@@ -22,7 +22,7 @@
   changed_when: false
   ignore_errors: true
 
-- name: systemctl restart
+- name: etcd | systemctl restart
   systemd:
     name: "{{ item.name }}"
     state: restarted
