--- a/molecule/ubuntu-18.04/playbook.yml
+++ b/molecule/ubuntu-18.04/playbook.yml
@@ -16,6 +16,7 @@
 
 - hosts: all
   remote_user: root
+  become: true
   roles:
     - role: bootstrap
     - role: python
@@ -23,6 +24,7 @@
 
 - hosts: all
   remote_user: root
+  become: true
   tasks:
     - name: etcd --version
       command: etcd --version
