--- a/molecule/centos-7/molecule.yml
+++ b/molecule/centos-7/molecule.yml
@@ -25,6 +25,8 @@ platforms:
       server: https://images.linuxcontainers.org
       protocol: simplestreams
       alias: centos/7/amd64
+    groups:
+      - etcd
 lint:
   name: yamllint
 dependency:
