--- a/molecule/suse-15/molecule.yml
+++ b/molecule/suse-15/molecule.yml
@@ -25,6 +25,8 @@ platforms:
       server: https://images.linuxcontainers.org
       protocol: simplestreams
       alias: opensuse/15.0/amd64
+    groups:
+      - etcd
 lint:
   name: yamllint
 dependency:
