--- a/molecule/ubuntu-18.04-multinode/molecule.yml
+++ b/molecule/ubuntu-18.04-multinode/molecule.yml
@@ -27,7 +27,7 @@ platforms:
     memory: 2048
     provision: true
     instance_raw_config_args:
-      - "vm.network 'public_network', use_dhcp_assigned_default_route: true, bridge: 'wlp2s0'"
+      - "vm.network 'public_network', use_dhcp_assigned_default_route: true, bridge: 'lxdbr0'"
       - "vm.provision 'shell', run: 'always', inline: 'route del default gw 10.0.2.2'"
     provider_raw_config_args:
       - "customize [ 'modifyvm', :id, '--uartmode1', 'disconnected' ]"
@@ -41,7 +41,7 @@ platforms:
     memory: 2048
     provision: true
     instance_raw_config_args:
-      - "vm.network 'public_network', use_dhcp_assigned_default_route: true, bridge: 'wlp2s0'"
+      - "vm.network 'public_network', use_dhcp_assigned_default_route: true, bridge: 'lxdbr0'"
       - "vm.provision 'shell', run: 'always', inline: 'route del default gw 10.0.2.2'"
     provider_raw_config_args:
       - "customize [ 'modifyvm', :id, '--uartmode1', 'disconnected' ]"
@@ -55,7 +55,7 @@ platforms:
     memory: 2048
     provision: true
     instance_raw_config_args:
-      - "vm.network 'public_network', use_dhcp_assigned_default_route: true, bridge: 'wlp2s0'"
+      - "vm.network 'public_network', use_dhcp_assigned_default_route: true, bridge: 'lxdbr0'"
       - "vm.provision 'shell', run: 'always', inline: 'route del default gw 10.0.2.2'"
     provider_raw_config_args:
       - "customize [ 'modifyvm', :id, '--uartmode1', 'disconnected' ]"
