--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -284,9 +284,9 @@
 - name: base64 encode certificates
   shell: |
     set -o pipefail
-    tar zcfP - {{ item.value | join(' ') }} | base64 -w 0
-  with_dict:
-    base64:
+    tar zcfP - {{ params | join(' ') }} | base64 -w 0
+  vars:
+    params:
       - "{{ etcd_cert_file }}"
       - "{{ etcd_key_file }}"
       - "{{ etcd_trusted_ca_file }}"
@@ -303,7 +303,7 @@
 - name: base64 decode certificates
   shell: |
     set -o pipefail
-    echo -n {{ base64_encode_result.results[0].stdout | quote }} | base64 -d | tar zx -C /
+    echo -n {{ base64_encode_result.stdout | quote }} | base64 -d | tar zx -C /
   args:
     executable: "/bin/bash"
   when: ansible_hostname != ansible_play_hosts[0]
