--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,7 +41,7 @@ etcd_initial_advertise_peer_urls: "https://{{ ansible_default_ipv4.address }}:23
 # initial cluster configuration for bootstrapping.
 etcd_initial_cluster: >-
   {%- for host in ansible_play_hosts -%}
-  {{ host }}=https://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:2380,
+  {{ host }}=https://{{ hostvars[host].ansible_default_ipv4.address }}:2380,
   {%- endfor -%}
 
 # Initial cluster state ("new" or "existing").
@@ -59,6 +59,20 @@ etcd_cert_file: "/etc/etcd/pki/server.crt"
 # Path to the client server TLS key file.
 etcd_key_file: "{{ etcd_cert_file | splitext | first }}.key"
 
+# commonName field of the CSR.
+etcd_csr_common_name: "{{ ansible_play_hosts[0] }}"
+
+# subjectAltName field of the CSR.
+etcd_csr_subject_alt_name: >-
+  {%- for host in ansible_play_hosts -%}
+  DNS:{{ host }},
+  {%- endfor -%}
+  DNS:localhost,
+  {%- for host in ansible_play_hosts -%}
+  IP:{{ hostvars[host].ansible_default_ipv4.address }},
+  {%- endfor -%}
+  IP:127.0.0.1
+
 # Enable client cert authentication.
 etcd_client_cert_auth: true
 
@@ -70,6 +84,20 @@ etcd_peer_cert_file: "/etc/etcd/pki/peer.crt"
 
 # Path to the peer server TLS key file.
 etcd_peer_key_file: "{{ etcd_peer_cert_file | splitext | first }}.key"
+
+# commonName field of the CSR.
+etcd_peer_csr_common_name: "{{ ansible_play_hosts[0] }}"
+
+# subjectAltName field of the CSR.
+etcd_peer_csr_subject_alt_name: >-
+  {%- for host in ansible_play_hosts -%}
+  DNS:{{ host }},
+  {%- endfor -%}
+  DNS:localhost,
+  {%- for host in ansible_play_hosts -%}
+  IP:{{ hostvars[host].ansible_default_ipv4.address }},
+  {%- endfor -%}
+  IP:127.0.0.1
 
 # Enable peer client cert authentication.
 etcd_peer_client_cert_auth: true
