https://github.com/etcd-io/etcd/releases/tag/v3.4.0

--- a/molecule/redhat-7-singlenode/playbook.yml
+++ b/molecule/redhat-7-singlenode/playbook.yml
@@ -69,7 +69,7 @@
     - name: etcdctl put foo bar
       shell: |
         set -o pipefail
-        ETCDCTL_API=3 etcdctl \
+        etcdctl \
           --cacert=/etc/etcd/pki/ca.crt \
           --cert=/etc/etcd/pki/server.crt \
           --endpoints=https://127.0.0.1:2379 \
@@ -84,7 +84,7 @@
     - name: etcdctl get foo
       shell: |
         set -o pipefail
-        ETCDCTL_API=3 etcdctl \
+        etcdctl \
           --cacert=/etc/etcd/pki/ca.crt \
           --cert=/etc/etcd/pki/server.crt \
           --endpoints=https://127.0.0.1:2379 \
