--- a/molecule/suse-15/playbook.yml
+++ b/molecule/suse-15/playbook.yml
@@ -43,7 +43,7 @@
     - name: etcdctl put foo bar
       shell: |
         set -o pipefail
-        ETCDCTL_API=3 etcdctl \
+        etcdctl \
           --cacert=/etc/etcd/pki/ca.crt \
           --cert=/etc/etcd/pki/server.crt \
           --endpoints=https://127.0.0.1:2379 \
@@ -58,7 +58,7 @@
     - name: etcdctl get foo
       shell: |
         set -o pipefail
-        ETCDCTL_API=3 etcdctl \
+        etcdctl \
           --cacert=/etc/etcd/pki/ca.crt \
           --cert=/etc/etcd/pki/server.crt \
           --endpoints=https://127.0.0.1:2379 \
